--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,6 +21,7 @@
                 android:layout_height="@dimen/_35sdp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:contentDescription="@string/button_back"
                 android:src="@drawable/ic_baseline_arrow_back_24"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -31,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:text="Login"
+                android:text="@string/login"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_25sdp"
                 android:textStyle="bold"
@@ -45,7 +46,8 @@
                 android:layout_width="@dimen/_90sdp"
                 android:layout_height="@dimen/_90sdp"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:src="@drawable/ic_baseline_person_24"
+                android:contentDescription="@string/app_logo"
+                android:src="@drawable/myfriends_logo"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_12sdp"
-                android:text="Hello There , Please Login to continue"
+                android:text="@string/hello_there_please_login_to_continue"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_14sdp"
                 android:layout_marginBottom="@dimen/_8sdp"
@@ -90,7 +92,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="12dp"
-                    android:text="Phone"
+                    android:text="@string/phone"
                     app:layout_constraintTop_toTopOf="parent"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_15sdp"
@@ -101,6 +103,7 @@
                     android:id="@+id/textInputLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:boxStrokeWidth="0dp"
                     android:layout_margin="@dimen/_15sdp"
                     app:layout_constraintTop_toBottomOf="@+id/textView2"
                     tools:layout_editor_absoluteX="18dp">
@@ -109,8 +112,10 @@
                         android:id="@+id/etPhone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Masukan Nomor Telephone"
+                        android:hint="@string/masukan_nomor_telephone"
                         android:inputType="phone"
+
+                        android:autofillHints="phone"
                         android:maxLines="1" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -121,7 +126,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="24dp"
-                    android:text="Password"
+                    android:text="@string/password"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_15sdp"
                     android:textStyle="bold"
@@ -132,6 +137,7 @@
                     android:id="@+id/textInputLayout1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:boxStrokeWidth="0dp"
                     android:layout_margin="@dimen/_15sdp"
                     app:layout_constraintTop_toBottomOf="@+id/textView4"
                     app:passwordToggleEnabled="true"
@@ -141,17 +147,21 @@
                         android:id="@+id/etPassword"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Masukan Password"
+                        android:hint="@string/masukan_password"
+                        app:boxStrokeWidth="0dp"
                         android:inputType="textPassword"
+                        android:autofillHints="password"
                         android:maxLines="1" />
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnLogin"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_40sdp"
+                    android:layout_height="@dimen/_30sdp"
                     android:layout_marginTop="30dp"
-                    android:text="Login"
+                    android:text="@string/login"
+                    android:textColor="@color/white"
+                    android:background="@drawable/button_border"
                     android:layout_margin="@dimen/_20sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.498"
@@ -164,28 +174,45 @@
 
         </androidx.cardview.widget.CardView>
 
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_6sdp"
+            android:text="don't Have an account Register here"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_14sdp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cardView" />
+
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/cardView"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:layout_marginEnd="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_4sdp"
             app:cardCornerRadius="@dimen/_10sdp"
-            android:layout_margin="@dimen/_15sdp">
+            app:layout_constraintTop_toBottomOf="@id/textView5"
+            tools:layout_editor_absoluteX="43dp">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnRegister"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_40sdp"
-                android:text="Register"
-                android:layout_marginStart="@dimen/_20sdp"
-                android:layout_marginEnd="@dimen/_20sdp"
+                android:layout_height="@dimen/_30sdp"
                 android:layout_gravity="center"
+                android:layout_marginStart="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_8sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
                 android:layout_marginBottom="@dimen/_8sdp"
+                android:background="@drawable/button_border"
+                android:text="@string/register"
+                android:textColor="@color/white"
                 tools:layout_editor_absoluteX="138dp"
                 tools:layout_editor_absoluteY="642dp" />
 
         </androidx.cardview.widget.CardView>
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
