--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/mainColor"
+        android:background="@drawable/gradient"
         tools:context=".ui.register.RegisterActivity">
 
         <ImageView
@@ -15,6 +15,7 @@
             android:layout_height="@dimen/_35sdp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:contentDescription="@string/button_back"
             android:src="@drawable/ic_baseline_arrow_back_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -23,8 +24,9 @@
             android:id="@+id/imageView"
             android:layout_width="@dimen/_100sdp"
             android:layout_height="@dimen/_100sdp"
-            android:layout_marginTop="68dp"
-            android:src="@drawable/ic_baseline_person_24"
+            android:layout_marginTop="@dimen/_50sdp"
+            android:contentDescription="@string/app_logo"
+            android:src="@drawable/myfriends_logo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,8 +37,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="20dp"
-            android:text="Register"
+            android:layout_marginTop="10dp"
+            android:text="@string/register"
             android:textColor="@color/white"
             android:textSize="@dimen/_25sdp"
             android:textStyle="bold"
@@ -67,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="12dp"
-                    android:text="Name"
+                    android:text="@string/name"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_15sdp"
                     android:textStyle="bold"
@@ -79,6 +81,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/_15sdp"
+
+                    app:boxStrokeWidth="0dp"
                     app:layout_constraintTop_toBottomOf="@+id/tvName"
                     tools:layout_editor_absoluteX="18dp">
 
@@ -86,7 +90,8 @@
                         android:id="@+id/etName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Masukan Nama Anda"
+                        android:autofillHints="name"
+                        android:hint="@string/masukan_nama_anda"
                         android:inputType="text"
                         android:maxLines="1" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -97,7 +102,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="12dp"
-                    android:text="Phone"
+                    android:text="@string/phone"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_15sdp"
                     android:textStyle="bold"
@@ -109,6 +114,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/_15sdp"
+                    app:boxStrokeWidth="0dp"
+
                     app:layout_constraintTop_toBottomOf="@+id/tvPhone"
                     tools:layout_editor_absoluteX="18dp">
 
@@ -116,7 +123,8 @@
                         android:id="@+id/etPhone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Masukan Nomor Telephone Anda"
+                        android:autofillHints="phone"
+                        android:hint="@string/masukan_nomor_telephone_anda"
                         android:inputType="phone"
                         android:maxLines="1" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -127,7 +135,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="12dp"
-                    android:text="Password"
+                    android:text="@string/password"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_15sdp"
                     android:textStyle="bold"
@@ -139,6 +147,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/_15sdp"
+                    app:boxStrokeWidth="0dp"
+
                     app:layout_constraintTop_toBottomOf="@+id/tvPassword"
                     app:passwordToggleEnabled="true"
                     tools:layout_editor_absoluteX="18dp">
@@ -147,17 +157,22 @@
                         android:id="@+id/etPassword"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Masukan Password Anda"
+                        android:autofillHints="password"
+                        android:hint="@string/masukan_password_anda"
                         android:inputType="textPassword"
                         android:maxLines="1" />
+
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnRegister"
-                    android:layout_width="@dimen/_230sdp"
-                    android:layout_height="@dimen/_40sdp"
-                    android:layout_marginTop="30dp"
-                    android:text="Register"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_30sdp"
+                    android:layout_margin="@dimen/_20sdp"
+                    android:background="@drawable/button_border"
+                    android:text="@string/register"
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.498"
                     app:layout_constraintStart_toStartOf="parent"
