--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,7 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">#52E5E7</item>
-        <item name="android:navigationBarColor">#130CB7</item>
+        <item name="android:navigationBarColor">#D8D4D4</item>
 
         <!-- Customize your theme here. -->
     </style>
